updated footer, fixed homepage spacing, replaced homepage blue text with italicized

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -13,10 +13,6 @@
     border-radius: .75rem;
 }
 
-.bold-span {
-    color: #0d6efd;
-}
-
 .credly-link {
     width: 95px;
 }
